@@ -1,95 +1,93 @@
 package com.swp391.bloodcare.controller;
 
-import com.swp391.bloodcare.entity.Account;
-import com.swp391.bloodcare.entity.BloodDonationEvent;
+import com.swp391.bloodcare.dto.BloodDonationEventDTO;
 import com.swp391.bloodcare.service.EventService;
 import jakarta.persistence.EntityNotFoundException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-//import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.*;
 
 @RestController
+@RequestMapping("/api/event")
 public class EventController {
-    @Autowired
-    private EventService eventService;
 
-    @GetMapping("/event")
-    public ResponseEntity<List<BloodDonationEvent>> getEvent() {
-       List<BloodDonationEvent> events = eventService.getAllEvent();
-        return ResponseEntity.ok(events);
+    private final EventService eventService;
+
+    public EventController(EventService eventService) {
+        this.eventService = eventService;
     }
 
-    @PostMapping("/event")
-    public ResponseEntity<BloodDonationEvent> addEvent(@RequestBody BloodDonationEvent event) {
-        String username = SecurityContextHolder.getContext().getAuthentication().getName();
-
-        BloodDonationEvent createdEvent = eventService.createEventByUsername(username, event);
-
-        return ResponseEntity.status(HttpStatus.CREATED).body(createdEvent);
-    }
-
-
-    @PutMapping("/event/{id}")
-    public ResponseEntity<?> updateEvent(
-            @PathVariable("id") int id,
-            @RequestBody BloodDonationEvent updatedEvent
-    ) {
+    @GetMapping("/getall")
+    public ResponseEntity<?> getEvent() {
         try {
-            BloodDonationEvent result = eventService.updateEvent(id, updatedEvent);
-            return ResponseEntity.ok(result); // 200 OK + object
-        } catch (EntityNotFoundException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Event not found with id: " + id);
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Update failed: " + e.getMessage());
-        }
-    }
-
-    @DeleteMapping("/event/{id}")
-    public ResponseEntity<?> deleteEvent(@PathVariable("id") int id) {
-        try {
-            eventService.deleteEvent(id);
-
-            // Trả về JSON message thông báo thành công
-            Map<String, String> response = new HashMap<>();
-            response.put("message", "Event deleted successfully with id: " + id);
-            return ResponseEntity.ok(response); // 200 OK
-
-        } catch (EntityNotFoundException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Collections.singletonMap("error", "Event not found with id: " + id));
-
+            List<BloodDonationEventDTO> events = eventService.getAllEvent();
+            return ResponseEntity.ok(events);
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("error", "Delete failed: " + e.getMessage()));
+                    .body(Map.of("error", "Lỗi khi lấy danh sách sự kiện: " + e.getMessage()));
         }
     }
 
+    @PostMapping("/create")
+    public ResponseEntity<?> addEvent(@RequestBody BloodDonationEventDTO dto) {
+        try {
+            String username = SecurityContextHolder.getContext().getAuthentication().getName();
+            BloodDonationEventDTO createdEvent = eventService.createEventByUsername(username, dto);
+            return ResponseEntity.status(HttpStatus.CREATED).body(createdEvent);
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(Map.of("error", "Không tìm thấy tài khoản tạo sự kiện"));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of("error", "Tạo sự kiện thất bại: " + e.getMessage()));
+        }
+    }
 
+    @PutMapping("/update/{id}")
+    public ResponseEntity<?> updateEvent(@PathVariable("id") String id,
+                                         @RequestBody BloodDonationEventDTO dto) {
+        try {
+            BloodDonationEventDTO updatedEvent = eventService.updateEvent(id, dto);
+            return ResponseEntity.ok(updatedEvent);
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(Map.of("error", "Không tìm thấy sự kiện với ID: " + id));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of("error", "Cập nhật thất bại: " + e.getMessage()));
+        }
+    }
 
-    @GetMapping("/event/by-date")
-    public ResponseEntity<List<BloodDonationEvent>> getEventsByDateRange(
+    @DeleteMapping("/delete/{id}")
+    public ResponseEntity<?> deleteEvent(@PathVariable("id") String id) {
+        try {
+            eventService.deleteEvent(id);
+            return ResponseEntity.ok(Map.of("message", "Đã xoá sự kiện thành công với ID: " + id));
+        } catch (EntityNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(Map.of("error", "Không tìm thấy sự kiện với ID: " + id));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of("error", "Xóa sự kiện thất bại: " + e.getMessage()));
+        }
+    }
+
+    @GetMapping("/filter/by-date")
+    public ResponseEntity<?> getEventsByDateRange(
             @RequestParam("start") @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) Date start,
             @RequestParam("end") @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) Date end
     ) {
-        List<BloodDonationEvent> events = eventService.getEventByDate(start, end);
-        return ResponseEntity.ok(events);
+        try {
+            List<BloodDonationEventDTO> events = eventService.getEventByDate(start, end);
+            return ResponseEntity.ok(events);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of("error", "Không thể lọc sự kiện theo ngày: " + e.getMessage()));
+        }
     }
-
-
-
-
-
-
-
-
-
-
-
 }
+
